@@ -1,6 +1,8 @@
 v0.4.3 (Unreleased development release)
 - [phate89] Use files.getDirectory to list playlists
 - Just Select method - option to show 'None'
+- New management dialog button 311 - select from defined thumbnails
+- Fixes
 
 v0.4.2
 - [robweber] Fix for profiles shared via path substitution
